--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  color-scheme: light dark;
+  --fontStack: 'Open sans', 'Segoe UI', 'Roboto', sans-serif;
+  --txtColor: #464646;
+  --fontSize: 16px;
+  --line-height: 1.7;
+  --containerWidth: 1200px;
+  --containerMaxWidth: 90%;
+  --accentColor: #203060;
+  --headerHeight: 70px;
+  --headerWidth: 100vw;
+  --headerBg: #eee;
+  --footerBg: #eee;
+  --headerTxtColor: #5e5e5e;
+  --genericPadding: 6px;
+  --footerHeight: 50px;
+  --footerTxtColor: #5e5e5e;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  color-scheme: dark light;
+  font-size: var(--fontSize);
+  font-family: var(--fontStack);
+  color: var(--txtColor);
+  scroll-behavior: smooth;
+}
+
+/* CSS-only solution using :has()
+   the JS version is commented out lower down */
+
+:root:has(#theme [value="â˜€ï¸"]:checked) {
+  color-scheme: light;
+  --base: #cfcfcf;
+  --text: #212121;
+}
+
+:root:has(#theme [value="ðŸŒ‘"]:checked) {
+  color-scheme: dark;
+  --base: #212121;
+  --text: #cfcfcf;
+}
+
+body {
+  min-height: 100vh;
+  width: 100vw;
+  font-family: var(--fontStack);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1rem;
+  /* overflow-y: scroll; */
+}
+
+code, .code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+img, picture, svg, video {
+  max-width: 100%;
+  height: auto;
+}
+
+hr {
+  height: 0;
+  border: 0 none;
+  border-top: 1px dotted #777;
+  margin: 30px 0;
+}
+
+header {
+  height: var(--headerHeight);
+  width: var(--headerWidth);
+  background-color: var(--headerBg);
+  color: var(--headerTxtColor);
+  padding: var(--genericPadding);
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+main {
+  min-height: calc(100vh - var(--headerHeight) - var(--footerHeight));
+  padding: var(--genericPadding);
+  line-height: var(--line-height);
+}
+
+footer {
+  height: var(--footerHeight);
+  background-color: var(--footerBg);
+  color: var(--footerTxtColor);
+  padding: var(--genericPadding);
 }
